@startuml
!define RECTANGLE class

' Generate using:

' java -jar /home/minguzzi/download/plantUML/plantuml-1.2025.2.jar -o${REPO_ROOT}/docs/tech_kb_project/uml_schemas ${REPO_ROOT}/docs/tech_kb_project/storage.puml

title Tech KB Doc


package storage
{
enum EmbedderEnum {
  FastEmbedBase
  FastEmbedNomicAI
  FastEmbedDefault
  GoogleEmbedding
}

class Embedding
note right of Embedding
  list[ numbers]
end note

class Embeddings
Embeddings *-- Embedding

abstract class Embedder
{
  {abstract} int embeddingSize()
  {abstract} Embedding  embedDocument( str )
  {abstract} Embeddings embedDocuments( [str] )
  {abstract} Embedding  embedQuery( str )
  {abstract} Embeddings embedQueries( [str] )
}

Embedder <|-- FastEmbedEmbedder
Embedder <|-- GoogleGenAIEmbedder

class EmbedderFactory
{
  {static} createEmbedder( EmbedderEnum)
}

EmbedderFactory -- EmbedderEnum

}
' package storage

@enduml
